- fix https://github.com/padreati/rapaio-jupyter-kernel/issues/42